Add security check agains path traversal in image controller